setup websocket and implement broadcast message to user after moved column

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -16,6 +16,7 @@ include "security.conf"
 # Enable modules
 play.modules.enabled += "modules.SecurityModule"
 play.modules.enabled += "modules.DatabaseModule"
+play.modules.enabled += "modules.ActorsModule"
 
 # Enable filters
 play.filters.enabled += "play.filters.gzip.GzipFilter"
