--- a/backend/api-specs/api_specs.yaml
+++ b/backend/api-specs/api_specs.yaml
@@ -1972,6 +1972,65 @@ paths:
               example:
                 message: "Task with ID 22 does not exist"
 
+  /project/{projectId}/columns/tasks/archived:
+    get:
+      tags:
+        - Tasks
+      summary: Get archived tasks in project
+      description: Retrieves all archived tasks in the specified project
+      parameters:
+        - in: path
+          name: projectId
+          required: true
+          description: Project ID
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: Archived tasks retrieved successfully
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/ApiResponse'
+                  - type: object
+                    properties:
+                      data:
+                        type: array
+                        items:
+                          $ref: '#/components/schemas/TaskSummariesResponse'
+              example:
+                message: "Archived tasks retrieved successfully"
+                data:
+                  - id: 2
+                    name: "Task A"
+                    position: 3
+                  - id: 3
+                    name: "Task B"
+                    position: 4
+
+          '401':
+            description: Unauthenticated request
+            content:
+              application/json:
+                schema:
+                  allOf:
+                    - $ref: '#/components/schemas/ApiResponse'
+                    - type: object
+                example:
+                  message: "Authentication required"
+
+          '404':
+            description: Project not found
+            content:
+              application/json:
+                schema:
+                  allOf:
+                    - $ref: '#/components/schemas/ApiResponse'
+                    - type: object
+                example:
+                  message: "Project not found"
+
 components:
   schemas:
     # Request schemas
@@ -2414,6 +2473,21 @@ components:
         position:
           type: integer
           description: Position of the column in the project board
+          example: 1
+    TaskSummariesResponse:
+      type: object
+      properties:
+        id:
+          type: integer
+          description: Task ID
+          example: 1
+        name:
+          type: string
+          description: Task name
+          example: "Task A"
+        position:
+          type: integer
+          description: Position of the task in the column
           example: 1
 
     ProjectResponse:
