insert dummy data

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -89,3 +89,13 @@ play.http.errorHandler = "exception.CustomErrorHandler"
 
 # Link preview api key
 linkpreview.api.key = ${?LINK_PREVIEW_API_KEY}
+
+# Data seeder configuration
+seeder {
+  numUsers = 30
+  numWorkspaces = 4
+  projectsPerWorkspaceMin = 1
+  projectsPerWorkspaceMax = 3
+  totalTasksPerProject = 60000
+  taskBatch = 3000
+}
