--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -93,9 +93,15 @@ linkpreview.api.key = ${?LINK_PREVIEW_API_KEY}
 # Data seeder configuration
 seeder {
   numUsers = 30
+  numUsers = ${?SEEDER_NUM_USERS}
   numWorkspaces = 4
+  numWorkspaces = ${?SEEDER_NUM_WORKSPACES}
   projectsPerWorkspaceMin = 1
+  projectsPerWorkspaceMin = ${?SEEDER_PROJECTS_PER_WORKSPACE_MIN}
   projectsPerWorkspaceMax = 3
-  totalTasksPerProject = 60000
+  projectsPerWorkspaceMax = ${?SEEDER_PROJECTS_PER_WORKSPACE_MAX}
+  totalTasksPerProject = 10000
+  totalTasksPerProject = ${?SEEDER_TOTAL_TASKS_PER_PROJECT}
   taskBatch = 3000
+  taskBatch = ${?SEEDER_TASK_BATCH}
 }
