test: increase code coverage to 90%

--- a/backend/conf/application.test.conf
+++ b/backend/conf/application.test.conf
@@ -11,6 +11,7 @@ play.evolutions.db.default.enabled = true
 play.evolutions.db.default.autoApply = true
 play.evolutions.db.default.autoApplyDowns = true
 
+play.http.errorHandler = "exception.CustomErrorHandler"
 
 admin {
     email = "test@gmail.com"
