--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
         "tw-animate-css": "^1.3.7",
+        "use-debounce": "^10.0.6",
         "vite": "^7.0.6"
     },
     "devDependencies": {
