--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
         "@tailwindcss/vite": "^4.1.11",
         "axios": "^1.11.0",
         "clsx": "^2.1.1",
+        "date-fns": "^4.1.0",
         "lucide-react": "^0.536.0",
+        "qs": "^6.14.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-redux": "^9.2.0",
@@ -34,6 +36,7 @@
         "tailwind-merge": "^3.3.1",
         "tailwindcss": "^4.1.11",
         "tw-animate-css": "^1.3.7",
+        "use-debounce": "^10.0.6",
         "vite": "^7.0.6"
     },
     "devDependencies": {
@@ -44,6 +47,7 @@
         "@testing-library/react": "^14.2.1",
         "@testing-library/user-event": "^14.5.2",
         "@types/node": "^24.3.0",
+        "@types/qs": "^6.14.0",
         "@types/react": "^19.1.8",
         "@types/react-dom": "^19.1.6",
         "@vitejs/plugin-react": "^4.7.0",
