--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
         "@radix-ui/react-slot": "^1.2.3",
         "@reduxjs/toolkit": "^2.8.2",
         "@tailwindcss/vite": "^4.1.11",
+        "@tanstack/react-virtual": "^3.13.12",
         "axios": "^1.11.0",
         "clsx": "^2.1.1",
         "date-fns": "^4.1.0",
