--- a/.github/workflows/frontend-ci.yml
+++ b/.github/workflows/frontend-ci.yml
@@ -6,7 +6,7 @@ on:
     paths:
       - 'frontend/**'
   pull_request:
-    branches: [ dev ]
+    branches: [ main ]
     paths:
       - 'frontend/**'
 
@@ -16,6 +16,10 @@ jobs:
     defaults:
       run:
         working-directory: frontend
+    permissions:
+      contents: read
+      packages: write
+      security-events: write
 
     steps:
       # 1. Checkout & Setup
@@ -55,3 +59,40 @@ jobs:
         #   VERCEL_ORG_ID: ${{ vars.TRELLO_FRONTEND_VERCEL_ORG_ID }}
         #   VERCEL_PROJECT_ID: ${{ vars.TRELLO_FRONTEND_VERCEL_PROJECT_ID }}
         #   VITE_TRELLO_LIKE_API_URL: ${{ vars.VITE_TRELLO_LIKE_API_URL }}
+
+      # 7. Login ghcr.io
+      - name: Log in to the Container registry
+        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+      
+      # 8. build docker image
+      - name: Build and push Docker images
+        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+        uses: docker/build-push-action@v6
+        with:
+          context: ./backend
+          push: true
+          tags: ghcr.io/nashtech-garage/smart-taskhub-fe:latest
+
+      # 9. Scan docker image with trivy
+      - name: "Scan Docker Image with Trivy"
+        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+        uses: aquasecurity/trivy-action@master
+        with:
+          image-ref: 'ghcr.io/nashtech-garage/smart-taskhub-fe:latest'
+          format: 'sarif'
+          scan-type: 'image'
+          severity: 'CRITICAL,HIGH,WARNING'
+          output: 'trivy-results.sarif'
+      
+      # 10. Push Trivy scan results to github Security tab
+      - name: "Upload Trivy scan results to GitHub Security tab"
+        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: trivy-results.sarif
+          category: 'image'
