--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -1,5 +1,7 @@
 # https://www.playframework.com/documentation/latest/Configuration
 # Application Configuration
+include "keycloak.conf"
+
 app {
   env = "development"
   env = ${?APP_ENV}
@@ -29,9 +31,9 @@ slick.dbs.default.profile = "slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.driver = "org.postgresql.Driver"
 slick.dbs.default.db.url = "jdbc:postgresql://localhost:5432/smart_taskhub"
 slick.dbs.default.db.url = ${?DB_URL}
-slick.dbs.default.db.user = "postgres"
+slick.dbs.default.db.user = "admin"
 slick.dbs.default.db.user = ${?DB_USER}
-slick.dbs.default.db.password = "postgres"
+slick.dbs.default.db.password = "admin"
 slick.dbs.default.db.password = ${?DB_PASSWORD}
 
 # Play evolutions
