--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -12,8 +12,12 @@ client {
   url = ${?CLIENT_URL}
 }
 
+# Server configuration
 play.server.http.port = 9000
 play.server.http.port = ${?PORT}
+
+# Include Google OAuth2 client configuration
+include "google-oauth2-client.conf"
 
 # Include security configuration
 include "security.conf"
@@ -125,3 +129,9 @@ play.mailer {
 }
 
 logger.play.mailer = DEBUG
+
+# frontend configuration
+frontend {
+  url = "http://localhost:3000"
+  url = ${?FRONTEND_URL}
+}
