feat: invite user into workspace

--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -7,6 +7,11 @@ app {
   domain = ${?APP_DOMAIN}
 }
 
+client {
+  url = "http://localhost:3000"
+  url = ${?CLIENT_URL}
+}
+
 play.server.http.port = 9000
 play.server.http.port = ${?PORT}
 
@@ -105,3 +110,18 @@ seeder {
   taskBatch = 3000
   taskBatch = ${?SEEDER_TASK_BATCH}
 }
+
+play.mailer {
+  host = "sandbox.smtp.mailtrap.io"
+  host = ${?MAIL_HOST}
+  port = 2525
+  port = ${?MAIL_PORT}
+  tls = yes
+  ssl = no
+  user = ""
+  user = ${?MAIL_USER}
+  password = ""
+  password = ${?MAIL_PASSWORD}
+}
+
+logger.play.mailer = DEBUG
