--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,5 +1,5 @@
 # Base image with Java 21
-FROM openjdk:21-jdk-slim
+FROM eclipse-temurin:21-jdk-jammy
 
 # Install necessary tools: curl, unzip
 RUN apt-get update && apt-get install -y curl unzip && rm -rf /var/lib/apt/lists/*
