--- a/backend/conf/application.conf
+++ b/backend/conf/application.conf
@@ -36,7 +36,7 @@ slick.dbs.default.db.url = "jdbc:postgresql://localhost:5432/smart_taskhub"
 slick.dbs.default.db.url = ${?DB_URL}
 slick.dbs.default.db.user = "postgres"
 slick.dbs.default.db.user = ${?DB_USER}
-slick.dbs.default.db.password = "postgres"
+slick.dbs.default.db.password = "admin"
 slick.dbs.default.db.password = ${?DB_PASSWORD}
 
 # Play evolutions
