--- a/.github/workflows/backend-ci.yml
+++ b/.github/workflows/backend-ci.yml
@@ -67,16 +67,21 @@ jobs:
 
       # 8. Log in to ghcr.io
       - name: Log in to the Container registry
-        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # 9. Build and push Docker image (with cache)
+      # 9. Set up Docker Buildx
+      - name: Set up Docker Buildx
+        if: ${{ github.ref == 'refs/heads/main' }}
+        uses: docker/setup-buildx-action@v3
+
+      # 10. Build and push Docker image (with cache)
       - name: Build and push Docker image
-        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: docker/build-push-action@v6
         with:
           context: ./backend
@@ -87,7 +92,7 @@ jobs:
 
       # 10. Scan docker image with Trivy
       - name: "Scan Docker Image with Trivy"
-        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'ghcr.io/nashtech-garage/smart-taskhub-be:latest'
@@ -98,7 +103,7 @@ jobs:
       
       # 11. Upload Trivy scan results to GitHub Security tab
       - name: "Upload Trivy scan results to GitHub Security tab"
-        if: ${{ github.ref == 'refs/heads/main' || github.ref == 'refs/heads/dev' }}
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: github/codeql-action/upload-sarif@v3
         with:
           sarif_file: trivy-results.sarif
